--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.13"
-flask = "^3.1.0"
+fastapi = {extras = ["standard"], version = "^0.115.8"}
+pydantic-settings = "^2.7.1"
 
 
 [build-system]
