--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python = "^3.10"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
 pydantic-settings = "^2.7.1"
 sqlmodel = "^0.0.22"
+pydantic = "^2.10.6"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
