--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic-settings = "^2.7.1"
 sqlmodel = "^0.0.22"
 pydantic = "^2.10.6"
 psycopg2 = "^2.9.10"
+passlib = "^1.7.4"
 
 
 [build-system]
