--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ sqlmodel = "^0.0.22"
 pydantic = "^2.10.6"
 psycopg2 = "^2.9.10"
 psycopg2-binary = "^2.9.10"
-pyjwt = "^2.10.1
+pyjwt = "^2.10.1"
 passlib = "^1.7.4"
-bcrypt = "^4.3.0"
 jwt = "^1.3.1"
+bcrypt = "^4.3.0"
 
 
 [build-system]
