--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,13 @@ packages = [
 python = "^3.10"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
 pydantic-settings = "^2.7.1"
+sqlmodel = "^0.0.22"
+pydantic = "^2.10.6"
+psycopg2 = "^2.9.10"
+psycopg2-binary = "^2.9.10"
+passlib = "^1.7.4"
+jwt = "^1.3.1"
+bcrypt = "^4.1.1"
 pytest = "^8.3.5"
 
 
