--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,5 +18,14 @@ services:
     ports:
       - 8080:8080
 
+  api:
+    build: .
+    container_name: rachadez-backend
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+    depends_on:
+      - db
+
 volumes:
   postgres:
